syntax = "proto3";

package org.corfudb.runtime;
option java_package = "org.corfudb.runtime.proto.service";

import "rpc_common.proto";

/**
 * Protobuf definitions for the Base server RPCs. These
 * include request and response payloads for: PING, HANDSHAKE,
 * RESTART, RESET, SEAL, and VERSION.
 */

message PingRequestMsg {
}

message PingResponseMsg {
}

// Request sent to initiate handshake between client and server.
message HandshakeRequestMsg {
  UuidMsg client_id = 1;
  UuidMsg server_id = 2;

  // Rolling Upgrade: A test field to simulate a futuristic field
  bool rollingUpgradeRequest = 999;
}

// Response sent by server in the handshake stage.
message HandshakeResponseMsg {
  UuidMsg server_id = 1;

  // Rolling Upgrade: A test field to simulate a futuristic field
  bool rollingUpgradeResponse = 999;
}

message RestartRequestMsg {
}

message RestartResponseMsg {
}

message ResetRequestMsg {
}

message ResetResponseMsg {
}

message SealRequestMsg {
  int64 epoch = 1;
}

message SealResponseMsg {
}
